--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 
 title:            'Sylvester Manor Test 2'
 description:      'Still trying to figure this out'
-url:              'https://minicomp.github.io'
-baseurl:          '/wax'
+url:              'https://katelynautumn28.github.io'
+baseurl:          '/testsm2/'
 copyright:        'Example copyright org, 2023'
 logo:             '/assets/logo.png'
 default_thumb:    '/assets/default.png'
@@ -100,23 +100,23 @@ menu:
   - label: 'About'
     sub:
       - label: 'Wax'
-        link: '/about/'
+        link: 'testsm2/about/'
       - label: 'Documentation'
         link: 'https://minicomp.github.io/wiki/wax/'
       - label: 'Credits'
-        link: '/credits/'
+        link: 'testsm2/credits/'
   - label: 'Exhibits'
     sub:
       - label: 'Inline Parallax Image'
-        link: '/exhibits/a/'
+        link: 'testsm2/exhibits/a/'
       - label: 'Inline Image References'
-        link: '/exhibits/b/'
+        link: 'testsm2/exhibits/b/'
   - label: 'Browse'
-    link: '/collection/'
+    link: 'testsm2/collection/'
   - label: 'Search'
-    link: '/search/'
+    link: 'testsm2/search/'
   - label: 'Reuse'
-    link: '/reuse/'
+    link: 'testsm2/reuse/'
 
 # --------------------------------------------------------------
 # SITE FOOTER SETTINGS
