--- a/_config.yml
+++ b/_config.yml
@@ -105,12 +105,12 @@ menu:
         link: 'https://minicomp.github.io/wiki/wax/'
       - label: 'Credits'
         link: '/credits/'
-  - label: 'Exhibits'
+  - label: 'Blog'
     sub:
       - label: 'Blog Example A: Irene'
-        link: '/exhibits/a/'
-      - label: 'Inline Image References'
-        link: '/exhibits/b/'
+        link: '/blog/a/'
+      - label: 'Blog Example B: Sophia'
+        link: '/blog/b/'
   - label: 'Browse'
     link: '/collection/'
   - label: 'Search'
